--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-appwrite": "^0.7.3",
+    "react-native-paper": "^5.14.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0"
