--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-documents/picker": "^10.1.3",
+    "@react-native-documents/viewer": "^1.0.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.6",
@@ -19,6 +21,7 @@
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-device": "~7.0.3",
+    "expo-document-picker": "~13.0.3",
     "expo-env": "^1.1.1",
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
@@ -28,6 +31,7 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-appwrite": "^0.7.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
